NMinh: Fix z-index of mobile-more and thread overlay

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -749,6 +749,14 @@ video {
   z-index: 3001;
 }
 
+.z-\[4000\] {
+  z-index: 4000;
+}
+
+.z-\[4001\] {
+  z-index: 4001;
+}
+
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -984,10 +992,6 @@ video {
   height: 100vh;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .max-h-96 {
   max-height: 24rem;
 }
@@ -1050,10 +1054,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .min-w-10 {
@@ -1136,16 +1136,6 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.animate-spin {
-  animation: spin 1s linear infinite;
 }
 
 .cursor-not-allowed {
@@ -1376,11 +1366,6 @@ video {
   border-color: rgb(213 213 213 / var(--tw-border-opacity));
 }
 
-.border-gray-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(17 24 39 / var(--tw-border-opacity));
-}
-
 .bg-\[\#030303\] {
   --tw-bg-opacity: 1;
   background-color: rgb(3 3 3 / var(--tw-bg-opacity));
@@ -1457,11 +1442,6 @@ video {
 
 .bg-white\/10 {
   background-color: rgb(255 255 255 / 0.1);
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
